Fix problem that BouncyCastle provider is not used correctly