@@ -36,16 +36,19 @@ USER root
 COPY --from=builder --chown=jboss:root /data/WILDFLY/EidasNode.war /opt/jboss/wildfly/standalone/deployments/eidas-node.war
 # Copy BouncyCastle to Wildfly Modules
 COPY --from=builder --chown=jboss:root /data/AdditionalFiles/Wildfly15/ /opt/jboss/wildfly/modules/system/layers/base/
+# Copy customized java security properties file to /etc/java/security
+COPY docker/java_bc.security /etc/java/security/java_bc.security
 
 RUN mkdir -p /config/eidas/specificProxyService && \
     mkdir -p /config/keystore && \
     mkdir -p /work && \
     chown -R jboss:root /config && \
     chown -R jboss:root /work && \
-    # Add BouncyCastle Security Provider
-    sed -i 's/security.provider.12=SunPKCS11/security.provider.12=SunPKCS11\nsecurity.provider.13=org.bouncycastle.jce.provider.BouncyCastleProvider/g' /usr/lib/jvm/java/conf/security/java.security && \
     # See also https://apacheignite.readme.io/docs/getting-started#running-ignite-with-java-11-and-later-versions regarding add-exports
     printf '\nJAVA_OPTS=\"$JAVA_OPTS $JAVA_OPTS_CUSTOM -Djdk.tls.client.protocols=TLSv1.2 --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED --illegal-access=permit\"' \
+      >> /opt/jboss/wildfly/bin/standalone.conf && \
+    # Provide Bouncycastle Module and overwrite security providers
+    printf '\nJAVA_OPTS=\"$JAVA_OPTS -Djava.security.properties=/etc/java/security/java_bc.security --module-path /opt/jboss/wildfly/modules/system/layers/base/org/bouncycastle/main/bcprov-jdk15on-1.64.jar --add-modules org.bouncycastle.provider\"\n' \
       >> /opt/jboss/wildfly/bin/standalone.conf
 
 USER jboss
